# aoc2024

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc2024/day01/: day01.py
src/aoc2024/: __init__.py  run_day.py
src/aoc2024/day01/: day01.py
src/aoc2024/day02/: day02.py
src/aoc2024/day03/: day03.py
src/aoc2024/day04/: day04.py
src/aoc2024/day05/: day05.py
src/aoc2024/day07/: day07.py
src/aoc2024/day08/: day08.py
src/aoc2024/day09/: day09.py
src/aoc2024/day10/: day10.py
src/aoc2024/day11/: day11.py
src/aoc2024/day13/: day13.py
src/aoc2024/day14/: day14.py
src/aoc2024/day16/: day16.py
src/aoc2024/day17/: day17.py
src/aoc2024/day18/: day18.py
src/aoc2024/day19/: day19.py
src/aoc2024/day20/: day20.py
src/day06/: day06.py
src/graph_utils/: __init__.py  dijkstra.py
