[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
joblib = "^1.4.2"
tqdm = "^4.67.1"
types-tqdm = "^4.67.0.20241119"
joblib-stubs = "^1.4.2.5.20240918"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
